--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.RelaxedBlue"
+        android:theme="@style/Theme.Team7TCSS450"
         tools:targetApi="31" >
         <activity
             android:name=".AuthenticationActivity"
